# CalculatorMixedNumbers

./: CMakeLists.txt  calculate.cpp  calculate.h  fraction.cpp  fraction.h  friendsoffraction.cpp  main.cpp  mixedNumberCalculator.pro  mixednumber.cpp  mixednumber.h  parseexception.h  parser.cpp  parser.h  streamutilities.cpp  streamutilities.h
